# advent_of_code

./: pyproject.toml
2016/: 2016_10.ipynb
2018/: 2018_10.ipynb  2018_15.ipynb
2022/: 2022_01.ipynb  2022_02.ipynb  2022_03.ipynb  2022_04.ipynb  2022_05.ipynb  2022_06.ipynb  2022_07.ipynb  2022_08.ipynb  2022_09.ipynb  2022_10.ipynb
2023/: 2023_01.ipynb  2023_02.ipynb  2023_03.ipynb  2023_04.ipynb
training/: 2016_10.ipynb  2018_08.ipynb
