[tool.poetry]
name = "aoc-max"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "aoc_max"}]

[tool.poetry.dependencies]
python = "^3.8"
advent-of-code-data = "^1.1.4"
jupyter = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
